--- a/PHP/ejemploGetPost/index.html
+++ b/PHP/ejemploGetPost/index.html
@@ -16,7 +16,7 @@
     <input type="text" id="apellidos" name="apellidos" required><br><br>
 
     <label for="direccion">Dirección:</label>
-    <input type="text" id="direccion" name="direccion" required><br><br>
+    <input type="text" id="direccion" name="direccion" ><br><br>
 
     <label for="sexo">Sexo:</label>
     <select id="sexo" name="sexo">
@@ -30,7 +30,7 @@
       Estudios de grado medio
     </label><br><br>
 
-    <!-- GET / POST seçici -->
+    <!-- Para elegir GET / POST  -->
     <label for="metodo">Método:</label>
     <select id="metodo">
       <option value="get">GET</option>
